# Ime

./: .gitignore  AGENTS.md  README.md  WubiIME.spec  build.py  build_tsf_in_venv.py  build_tsf_in_venv2.py  test_candidate_window_fix.py  test_wubi_simple.py  wubi_config.json
debug/: latest_wubi_log.txt  诊断报告-五笔输入法不能出字.md  诊断报告-候选框不出来.md
wubi_ime/: README.md  SPEC.md  __init__.py  config.py  engine.py  keyboard_handler.py  launcher.py  main.py  requirements.txt  wubi_table.py
wubi_ime/tests/: test_engine.py
wubi_ime/ui/: __init__.py  candidate_window.py  status_window.py  tray_icon.py
wubi_ime_tsf/: CMakeLists.txt  README.md  build_cmake.bat  build_cmake.ps1  check_env.ps1  test.bat
wubi_ime_tsf/build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  WubiIME_TSF.exp  WubiIME_TSF.lib  build.ninja  cmake_install.cmake
wubi_ime_tsf/data/: wubi_86.json
wubi_ime_tsf/scripts/: diagnose_registration.ps1  register.bat  register_build2.bat  register_latest.bat  unregister.bat
wubi_ime_tsf/src/: WubiIME_TSF.def  candidate_window.cpp  candidate_window.h  common.h  dllmain.cpp  engine.cpp  engine.h  factory.cpp  factory.h  lang_bar_item.cpp  lang_bar_item.h  resource.rc  text_service.cpp  text_service.h  utils.cpp  utils.h
